added leaf litter to certain levels